--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".MainActivity2" />
         <activity android:name=".ShowInfoActivity" />
         <activity android:name=".InputInfoActivity" />
+        <activity android:name=".BeginInputActivity"/>
     </application>
 
 </manifest>
