--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,3 +32,15 @@ dependencies {
     implementation 'com.android.support:design:29.0.0'
 
 }
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
+dependencies {
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+}
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:+'
+    implementation 'androidx.constraintlayout:constraintlayout:+'
+}
